--- a/AnimeTrackerRe/AnimeTrackerRe/AnimeTrackerRe.csproj
+++ b/AnimeTrackerRe/AnimeTrackerRe/AnimeTrackerRe.csproj
@@ -63,10 +63,12 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Runtime" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
